--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Murali J",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
   },
