--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
@@ -51,7 +52,7 @@
     "prettier": "^3.3.3"
   },
   "engines": {
-    "node": ">=8.3.0"
+    "node": "^20"
   }
 }
 
